// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<League /> renders correctly 1`] = `
Array [
  <div>
    <div
      className="image -expand -plain"
    >
      <img
        className="image--native"
        loading="lazy"
        sizes="(min-width:3200px) 800px, 1200px"
        src="https://www.vanarama.com/Assets/images-optimised/home/national-league.png"
      />
    </div>
  </div>,
  <div>
    <span
      className="heading -black -large"
    >
      The Vanarama National League
    </span>
    <span
      className="text -lead -darker"
    >
      Read About Our Sponsorship
       
      <a
        className="link -teal -regular -plain"
        onClick={[Function]}
      >
        Here
      </a>
    </span>
    <div
      className="image -expand -plain"
    >
      <img
        className="image--native"
        loading="lazy"
        sizes="(min-width:3200px) 800px, 1200px"
        src="https://www.vanarama.com/Assets/images-optimised/home/league-cup.png"
      />
    </div>
  </div>,
]
`;

exports[`<League /> renders correctly with optional props 1`] = `
Array [
  <div>
    <div
      className="image -expand -plain"
    >
      <img
        alt="image1"
        className="image--native"
        loading="lazy"
        sizes="(min-width:3200px) 800px, 1200px"
        src="https://www.vanarama.com/Assets/images-optimised/home/national-league.png"
      />
    </div>
  </div>,
  <div>
    <span
      className="heading -black -large"
    >
      The Vanarama National League
    </span>
    <span
      className="text -lead -darker"
    >
      Read About Our Sponsorship
       
      <a
        className="link -teal -regular -plain"
        onClick={[Function]}
      >
        Here
      </a>
    </span>
    <div
      className="image -expand -plain"
    >
      <img
        alt="image1"
        className="image--native"
        loading="lazy"
        sizes="(min-width:3200px) 800px, 1200px"
        src="https://www.vanarama.com/Assets/images-optimised/home/league-cup.png"
      />
    </div>
  </div>,
]
`;
